<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CMP301Android</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="button_search">Search</string>
    <string name="button_add">Add</string>
    <string name="button_view">View</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="text_title">Title</string>
    <string name="ingredients">Ingredients</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="title_activity_view_local">View_localActivity</string>
    <string name="last_modified">Last Modified:</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_view__search">View_SearchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="back">Back</string>

</resources>