<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View_localActivity" >

    <Button
        android:id="@+id/view_local_goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="45dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <TextView
            android:id="@+id/ingredientsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/ingredients"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ListView
            android:id="@+id/ingredientsListView"
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_marginLeft="15dp" >
        </ListView>

        <TextView
            android:id="@+id/text_modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="22dp"
            android:text="@string/last_modified"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/modifedDate_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:ems="10"
            android:inputType="date" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_launcher" />

    </LinearLayout>

</RelativeLayout>